# ChangeLog for dev-perl/Net-Amazon-S3
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Amazon-S3/ChangeLog,v 1.22 2013/08/25 10:42:35 patrick Exp $

*Net-Amazon-S3-0.590.0 (25 Aug 2013)

  25 Aug 2013; Patrick Lauer <patrick@gentoo.org> +Net-Amazon-S3-0.590.0.ebuild:
  Bump

  29 Jun 2013; Mikle Kolyada <zlogene@gentoo.org> Net-Amazon-S3-0.560.0.ebuild:
  Remove dev-perl/Class-MOP dependency

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  21 Apr 2012; Torsten Veller <tove@gentoo.org> -Net-Amazon-S3-0.530.0.ebuild,
  -Net-Amazon-S3-0.540.0.ebuild:
  Cleanup

*Net-Amazon-S3-0.560.0 (13 Feb 2012)

  13 Feb 2012; Torsten Veller <tove@gentoo.org> +Net-Amazon-S3-0.560.0.ebuild:
  Version bump

  09 Oct 2011; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove tove from metadata.xml

*Net-Amazon-S3-0.540.0 (25 Sep 2011)

  25 Sep 2011; Torsten Veller <tove@gentoo.org> +Net-Amazon-S3-0.540.0.ebuild:
  Version bump

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -Net-Amazon-S3-0.53.ebuild:
  Cleanup

*Net-Amazon-S3-0.530.0 (29 Aug 2011)

  29 Aug 2011; Torsten Veller <tove@gentoo.org> +Net-Amazon-S3-0.530.0.ebuild:
  Change version scheme

  14 Apr 2011; Torsten Veller <tove@gentoo.org> Net-Amazon-S3-0.53.ebuild:
  Class-MOP was merge with Moose-2

  11 Jun 2010; Torsten Veller <tove@gentoo.org> -Net-Amazon-S3-0.52.ebuild:
  Cleanup

  31 May 2010; Torsten Veller <tove@gentoo.org> Net-Amazon-S3-0.53.ebuild:
  Depend on DateTime-Format-HTTP and Digest-MD5-File (#322121). Thanks to
  Michele Beltrame

*Net-Amazon-S3-0.53 (23 Apr 2010)

  23 Apr 2010; Robin H. Johnson <robbat2@gentoo.org>
  +Net-Amazon-S3-0.53.ebuild:
  Version bump via perl-bump experimental tool.

  16 Jul 2009; Torsten Veller <tove@gentoo.org> -Net-Amazon-S3-0.50.ebuild,
  -Net-Amazon-S3-0.51.ebuild:
  Cleanup

*Net-Amazon-S3-0.52 (03 Jul 2009)
