@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST Net-Amazon-S3-0.56.tar.gz 36467 SHA256 62150d3a5ec539c06284dda3702e7dc4959ecdcc6907b03f068a73ad8095f765 SHA512 1d471bd6f3382fb872a03e29c0f8dc3dd9abc6379266f505975e6a2fa36a0d64fe081b202dd6e1c281b15479ac9bccc3a1d99ac832af502b81ad5c1426b2a981 WHIRLPOOL 0943758f0da05347eb127521f94a3496154ebbf53a7c6d22dcd9dc0b43b9510890f4a85b668fcdd2c20e3e8e5f879a66f27afbdfdb97dd9e7d2475a3f5c61c14
 DIST Net-Amazon-S3-0.59.tar.gz 52272 SHA256 94f2bd6b317a9142e400d7d17bd573dc9d22284c3ceaa4864474ba674e0e2e9f SHA512 183fce9c9375a3c6d7ef9e1278e4684bb98a19e871c5cfe9bfb99607a0c3d697df1337c682d13305477fc143c22563b218325017506871c78e70f8e57c0a787f WHIRLPOOL e4c980d4f6cda542c8305c9bd1d190bd1136f17d7cc7a1cdffc07b849ca852c346c8e8b661be403cb4ffbdd9adc3bac04f7a824eb7b99f0b4a3b9942ac153c4b
-EBUILD Net-Amazon-S3-0.560.0.ebuild 888 SHA256 12b3e1d8a23c45c99412a1cd54dd2b01fe4fe1c623cf50e30bcfbd94cb0a957a SHA512 90c1c026c0d9b0a392844afc5cc56412dee9b3ca152407a0f60d39078820656e88b8464370e42fdb236b7dbf03ac6503639ea19730fbd81236ae9ebf0270ba78 WHIRLPOOL cf4e0aa2ae52c02d6191bf1d9f562f245f824dafad33e66e6bccad33394e0630246abd021faa3d620751f885be3e9e5e0bf26f197ff99fd2b39f208abd2e0d1c
-EBUILD Net-Amazon-S3-0.590.0.ebuild 888 SHA256 a7590456d96529e77788a3c924bf7330e3f3c71a77feec1a558e8540da00d64c SHA512 aa2b1f7abee3476d23eb5c44b0d52496b77d8f7af3efedff30429faf5e7860028c4022f09fe858328e0443f1f64cdcd94afe9bc4536250cfcd8a10d6948af030 WHIRLPOOL 4a2e6af4ebd3a7459b564e1d24361747ce82369f5a3d7253260747e59b182c11f39b5efb2bdbbe36a05bcddee62f7ac2e713edb271293e0557f4388b3bb92f35
-MISC ChangeLog 3092 SHA256 2ce7ee945db955f99d37bc0fddbce32832e634e07cafcb1f1247d07c1b48a4e4 SHA512 bd755450ef251280725cb6cc71496f0712b5d2c03d9326e137e4dff72c8b18c62a91cd30e269766979f1472f54781f7035ab68ec3b507de9d61e7445d68b6709 WHIRLPOOL 27d8cc0a31ed71e7b89a5183535571595a7528ce6f921de069df6aebdef60559b3c0ccf791a1b7679a0a6db5504dfa9beb9235fb9862cae6e44aa0c06ff9a3ac
+EBUILD Net-Amazon-S3-0.560.0.ebuild 888 SHA256 a6aa309173205dfeed29506a67dcf5c70f528db03e1f715a5af42abd70f3a060 SHA512 0e972d1769ccd3028e9643a2ddb7fe97babd5428e96035c3e20ca1026facebe43985ef7555e9517ef9e8e7c4633d48e7b18785fb4c68aab886f2c19a4a5ce5d8 WHIRLPOOL ab15187dc5560c7518ef47635972d04838703966ca89987611b73988e131f56c032899725bcb6eac22c622a75409215b9e043827f7f0d68fb31a0b746dfeda06
+EBUILD Net-Amazon-S3-0.590.0.ebuild 888 SHA256 038b33d7c0579a8a14dfab6f468ebeb1b8ab2b9eefc978e080a311e342c6b6e4 SHA512 a47322df9db0aada3ec15e6465c978c1f66881e393fe305068494e7acae336e218704fe4576df5f7dee49488be9b42bcfbb73f20bf41b4316bcdc9fad5ab74b4 WHIRLPOOL 80960baf9a2c167fa8ca1ad6843c084736e9433c18da63c267a571262c217a3040b851ea142f60f70a9bfe76857a491e684002a20b8168f713572bf3b3c4aad5
+MISC ChangeLog 3222 SHA256 e4d2e35b4a4abe0e98a828122b320acb5b3c49e52d43c1da61abcc378ae6f8aa SHA512 1e3a0ca346a69487d352deba52efd8c7daef61bfde3348e6ded3df56b53339ee57ee17a3e11ca02ebf998b4bc995a70e90da377735e402f0dae61053ea6530be WHIRLPOOL 8ccbc6ea366a97527bb0b0d0a5aab5661642e2f68c3e5ee5cce8b69f7caf687802c13b161d5f98272ca8f6573158decb574d2b6bf09501fad1465c0e2d0a3226
 MISC metadata.xml 1814 SHA256 c346d644811b4200a5b5d040201fe980ec3614a84876b42b17eb86176d05b65d SHA512 c2c1ecb575fe318657ed09474e4740fccd0df064855dd7790cc684caf5753311c0b74e39695f9f5aa1a240610132639abeb185c18e1d6db984789c7391c3387c WHIRLPOOL 42d6a82d8d571cdad6c7057352e82e49eb80e200a27335864354d5ea4db71c519b18d340e1838b991d396beb28b6802b41e2cc50b655f4dd273815f97d434ebe
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iJwEAQEIAAYFAlROV3EACgkQG9wOWsQutdZQXAQAwXCkvk+caFnMXJOnVlofVgKA
+HT+tgNOJwjMuF9YaJBC9p365DF4UnKKzTp1UTeKKEUQrXV/rjjOKnDmwYBfWR+NN
+bPavXyX5oAwsdh5wRiX7IHlcf/M51qGB6sHWQ0tnJo0gdC0IUy+8HdwNTjpBQj8s
+OzPLuYQTHsM73SV5Vgw=
+=JJto
+-----END PGP SIGNATURE-----
