@@ -1,8 +1,8 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Amazon-S3/Net-Amazon-S3-0.590.0.ebuild,v 1.1 2013/08/25 10:42:35 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Amazon-S3/Net-Amazon-S3-0.590.0.ebuild,v 1.2 2014/10/27 14:33:41 zlogene Exp $
 
-EAPI=4
+EAPI=5
 
 MODULE_AUTHOR=PFIG
 MODULE_VERSION=0.59
