@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Net-Amazon-S3
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Amazon-S3/ChangeLog,v 1.22 2013/08/25 10:42:35 patrick Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-Amazon-S3/ChangeLog,v 1.23 2014/10/27 14:33:41 zlogene Exp $
+
+  27 Oct 2014; Mikle Kolyada <zlogene@gentoo.org> Net-Amazon-S3-0.560.0.ebuild,
+  Net-Amazon-S3-0.590.0.ebuild:
+  Bump to EAPI=5
 
 *Net-Amazon-S3-0.590.0 (25 Aug 2013)
 
